added admin ban and unban with statistics for monthly users

--- a/lang/fa_panel.json
+++ b/lang/fa_panel.json
@@ -80,5 +80,7 @@
     "IsAdmin": "IsAdmin",
     "User": "User",
     "Users": "Users",
-    "Is_banned": "Is_banned"
+    "Is_banned": "Is_banned",
+    "Gender": "Gender",
+    "Age": "Age"
 }
